# deepbind

./: .codument-meta.json  .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  package.json
backend/: .env.example  CHANGELOG.md  config.py  main.py  overrides.txt  pyproject.toml  requirements.txt
backend/jarvis_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
backend/mcp_server/: __init__.py  __main__.py  app.py  config.py
backend/mcp_server/middleware/: __init__.py  audit.py  budget.py
backend/mcp_server/tools/: __init__.py  continuation.py  graph.py  jira.py  meta.py  notes.py  search.py  sessions.py  writes.py
backend/models/: database.py  schemas.py
backend/routers/: api_keys.py  bundle.py  chat.py  connections.py  enrichment.py  graph.py  jira.py  license.py  local_models.py  mcp.py  memory.py  preferences.py  retrieval_search.py  sessions.py  settings.py  source_import.py  specialists.py  workspace.py
backend/scripts/: classify_existing_sections.py  run_eval.py  run_frozen.py  sign_license.py
backend/services/: _anthropic_client.py  _config_io.py  _db.py  alias_index.py  build_epoch.py  bundle.py  chat_model_probe.py  chunking.py  claude.py  compaction_service.py  connection_events.py  connection_service.py  context_builder.py  council.py  dismissed_suggestions.py  document_classifier.py  duel_presets.py  embedding_service.py  enrichment_service.py  entitlement_gate.py  entitlements.py  entity_canonicalization.py  entity_extraction.py  first_run_orchestrator.py  inference_router.py  ingest.py  ingest_jobs.py  jira_ingest.py  license_public_key.py  license_service.py  llm_service.py  memory_pressure_monitor.py  memory_service.py  ollama_dispatcher.py  ollama_service.py  planning_service.py  preference_service.py  privacy.py  profile_service.py  reindex_supervisor.py  (+12 more)
backend/services/chat/: __init__.py  context_strategy.py
backend/services/enrichment/: __init__.py  models.py  repository.py  runtime.py  subjects.py  worker.py
backend/services/graph_service/: __init__.py  builder.py  (+8 more)
backend/tests/: conftest.py  test_alias_guardrails.py  test_alias_index.py  test_bm25_ranking.py  test_bundle_modes.py  test_chat_compaction.py  test_chat_compaction_wiring.py  test_chat_memory_pressure.py  test_chat_metrics.py  test_chat_model_probe.py  test_chat_provider.py  test_chat_security.py  test_chat_ws.py  test_claude_service.py  test_client_estimator_bootstrap.py  test_clock_tampering.py  test_compaction_service.py  test_concepts.py  test_config.py  test_connection_events.py  test_connection_service_backfill.py  test_connection_service_orphan.py  test_connection_service_pipeline.py  test_connection_service_scoring.py  test_connection_stats.py  test_context_builder_expansion_budget.py  test_context_builder_trace.py  test_context_strategy.py  test_cross_source.py  test_document_classifier.py  test_document_section_split.py  test_duel_backend.py  test_embedding_service.py  test_enrichment_pipeline.py  test_entitlement_gate.py  test_entitlements.py  test_entity_caps_scaling.py  test_entity_extraction.py  test_entity_extraction_en.py  test_entity_extraction_pl.py  (+72 more)
backend/utils/: markdown.py  pil_stub.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+425 files in other folders)
