[package]
name = "deepfilesai-desktop"
version = "0.1.0"
description = "DeepFilesAI desktop shell — Tauri 2 + Python sidecar (ADR 003)."
authors = ["DeepFilesAI"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["sync", "time", "io-util", "rt-multi-thread", "macros"] }
# HTTP client for the Tauri-IPC chat-send path (ADR 016). default-features off
# so we don't pull in TLS — the sidecar lives on loopback HTTP. `json` enables
# .json() body helpers; `http2` is fine for localhost too.
reqwest = { version = "0.12", default-features = false, features = ["json", "http2"] }
