[package]
name = "deepfilesai-desktop"
version = "0.1.0"
description = "DeepFilesAI desktop shell — Tauri 2 + Python sidecar (ADR 003)."
authors = ["DeepFilesAI"]
# Proprietary — see ../../LICENSE. SPDX `LicenseRef-` form per
# https://spdx.dev/learn/handling-license-info/ for non-standard licenses.
# Cargo accepts arbitrary strings here; the value is informational only
# (we never publish to crates.io).
license = "LicenseRef-Proprietary"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
getrandom = "0.3"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["sync", "time", "io-util", "rt-multi-thread", "macros"] }
# HTTP client for the Tauri-IPC chat-send path (ADR 016). default-features off
# so we don't pull in TLS — the sidecar lives on loopback HTTP. `json` enables
# .json() body helpers; `http2` is fine for localhost too.
reqwest = { version = "0.12", default-features = false, features = ["json", "http2"] }
# OS-keychain access for the trial-start timestamp per ADR 019 §"Trial: 30
# days, auto-starting, keychain-tracked". Wraps macOS Keychain / Windows
# Credential Manager / Secret Service (Linux). Native backends only — no
# in-memory fallback (the in-memory backend would defeat reinstall-survival
# which is the point of using the keychain in the first place).
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
